[package]
name = "my_sftp"
version = "0.1.0"
authors = ["knuckerr <johnkalafatasb@gmail.com>"]
edition = "2018"

[dependencies]
notify = "4.0.0"
walkdir = "2"
clap = "2"
indicatif = "0.10.3"
console = "0.7.2"
ssh2 = "0.3"
serde_json = "1.0"
serde = "1"
serde_derive = "1"
chrono = "0.4"
difference = "2.0"
